k8s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: mlops
  labels:
    app: fastapi-app
spec:
  selector:
    app: fastapi-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
